# keda-celery-flower-scaler

./: .gitignore  README.md  config.go  devenv.nix  flower.go  go.mod  go.sum  main.go  skaffold.yaml  tools.go
externalscaler/: externalscaler.pb.go  externalscaler_grpc.pb.go
k8s/: deploy.yaml  kustomization.yaml
pb/: externalscaler.pb.go  externalscaler.proto
test/celery-app/: .dockerignore  Dockerfile  pyproject.toml  skaffold.yaml
test/celery-app/celery_app/: api.py  tasks.py
test/celery-app/k8s/: deploy-api.yaml  deploy-broker.yaml  deploy-flower.yaml  deploy-worker.yaml  kustomization.yaml  ns.yaml  svc-api.yaml  svc-broker.yaml  svc-flower.yaml
test/k8s/: keda-scaler.yaml  kustomization.yaml
