[tool.poetry]
name = "celery-app"
version = "0.1.0"
description = ""
authors = ["Jashandeep Sohi <jsohi@lco.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.2.7"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
